# semest4

./: README.md
Computational Mathematics/: README.md
Computational Mathematics/Lab_1/: README.md  first  read.md  read.me
Computational Mathematics/Lab_1/Lab_1 _code/: 1.txt
Computational Mathematics/Lab_1/Lab_1 _code/src/: Actions.java  Main.java
Computational Mathematics/Lab_2/: README.md
Computational Mathematics/Lab_2/Lab2_code/: CMakeLists.txt  CompMethodAbstr.h  main.cpp
Computational Mathematics/Lab_2/Lab2_code/bisection/: BisectionMethod.cpp  BisectionMethodImpl.h
Computational Mathematics/Lab_2/Lab2_code/chord/: ChordMethod.cpp  ChordMethod.h
Computational Mathematics/Lab_2/Lab2_code/iterations/: IterationMethod.cpp  IterationMethod.h
Computational Mathematics/Lab_2/Lab2_code/util/: AnsStruct.h  DoubleComparator.h
Computational Mathematics/Lab_3/: README.md
Computational Mathematics/Lab_3/Lab_3_code/hello/src/: Functions.java  InputFunctions.java  Main.java  OutputFunctions.java  RectangleMethod.java
Computational Mathematics/Lab_4/: README.md
Computational Mathematics/Lab_4/Lab4_code/: CMakeLists.txt  NewtonMethod.cpp  NewtonMethod.h  main.cpp  matplotlib.h
Computational Mathematics/Lab_5/: README.md
Computational Mathematics/Lab_5/Lab_5_code/comp-math4/: CMakeLists.txt  MilneMethod.cpp  MilneMethod.h  main.cpp  matplotlib.h
data structure algorithm/296. Гиперпереход/: 1296.c  README.md
